# elbrus_algorithms

./: .gitignore
assignment1/browser/: CMakeLists.txt
assignment1/browser/include/: browser.hpp
assignment1/browser/src/: browser.cpp  stdin.cpp
assignment1/browser/test/: test.cpp
assignment1/unix/: CMakeLists.txt
assignment1/unix/include/: unix.hpp
assignment1/unix/src/: stdin.cpp  unix.cpp
assignment1/unix/test/: test.cpp
assignment2/: CMakeLists.txt
assignment2/benchmark/: benchmark.cpp
assignment2/include/: mysort.hpp
assignment2/scripts/: plot_bench.py
assignment2/test/: test.cpp
assignment3/: CMakeLists.txt
assignment3/include/: graph.hpp
assignment3/src/: main.cpp
assignment3/test/: test.cpp
mystruct/: CMakeLists.txt  mystruct.hpp  runcmake.sh  tests.cpp
